Finished up confirmation popups, fixed account deletion, added goodbye page and more

--- a/locales/de.json
+++ b/locales/de.json
@@ -588,36 +588,42 @@
 	"Successfully removed worker account": "Erfolgreich entferntes Arbeiterkonto entfernt",
 	"Successfully made worker account": "Erfolgreich gemachtes Arbeiterkonto",
 	"Successfully gave administrator perms": "Erfolgreich den Administrator -Perm",
-	"Users Projects": "Users Projects",
-	"contact_form_fill_all_fields": "contact_form_fill_all_fields",
-	"Fill all contact form fields": "Fill all contact form fields",
-	"Conctact form error": "Conctact form error",
-	"Password changed successfully": "Password changed successfully",
-	"Information updated succesfully": "Information updated succesfully",
-	"Appointment successfully cancelled.": "Appointment successfully cancelled.",
-	"Choose an appointment date": "Choose an appointment date",
-	"Successfully logged out": "Successfully logged out",
-	"Contact form success": "Contact form success",
-	"Attempting to send email...": "Attempting to send email...",
-	"Message sent succesfully": "Message sent succesfully",
-	"Please select a date and time": "Please select a date and time",
-	"Please select an appointment type": "Please select an appointment type",
-	"Information updated successfully": "Information updated successfully",
-	"Back to login": "Back to login",
-	"Choose an appointment type first": "Choose an appointment type first",
-	"Password reset email sent": "Password reset email sent",
-	"End date changed successfully": "End date changed successfully",
-	"dasfds": "dasfds",
-	"Project finished successfully": "Project finished successfully",
-	"Reset email sent": "Reset email sent",
-	"New Password": "New Password",
-	"Password must be at least 8 characters": "Password must be at least 8 characters",
-	"Enter a new password": "Enter a new password",
-	"Enter new password": "Enter new password",
-	"Confirm Password": "Confirm Password",
-	"Passwords do not match": "Passwords do not match",
-	"Password changed successfully!": "Password changed successfully!",
-	"Sending reset email...": "Sending reset email...",
-	"Reset token is invalid or expired": "Reset token is invalid or expired",
-	"User not found": "User not found"
+	"Enter a new password": "Geben Sie ein neues Passwort ein",
+	"Enter new password": "Geben Sie ein neues Passwort ein",
+	"Confirm Password": "Bestätigen Sie Ihr Passwort",
+	"Passwords do not match": "Passwörter stimmen nicht überein",
+	"Password changed successfully!": "Passwort erfolgreich ersetzt!",
+	"Sending reset email...": "E -Mail -E -Mail ...",
+	"Reset token is invalid or expired": "Token ist nicht gültig für das Ändern von Kennwörtern oder ist beendet",
+	"User not found": "Benutzer nicht gefunden",
+	"Find us at this location": "Finden Sie uns hier",
+	"Help me get there": "Hilf mir, dorthin zu gelangen",
+	"Confirm": "Behandeln",
+	"Are you sure?": "Bist du in Sicherheit?",
+	"This will change ": "Wird geändert ",
+	"projects status to": "Reparaturstatus",
+	"Status updated successfully": "Status erfolgreich wiederhergestellt",
+	"This will change": "Wird geändert",
+	"This will finish": "Wird abgeschlossen sein",
+	"project and send an email to them": "E-Mail-Erklärung reparieren und gesendet",
+	"Project not found": "Es wurde keine Reparatur gefunden",
+	"This will update the end date projection and set the project to \"Delayed\"": "Wird das Enddatum wiederherstellen und als \"verspätet\" gekennzeichnet",
+	"Choose a date first": "Wählen Sie zuerst das Datum",
+	"Choose Appointment Time": "Wählen Sie eine Reparaturzeit",
+	"This will cancel": "Wird storniert",
+	"your project": "Ihr Projekt",
+	"This will cancel your project for": "Wird auf die Reparatur zurückgegriffen",
+	"Session ended": "Sitzung endete",
+	"This will permanently delete": "Wird erfolglos gelöscht sein",
+	"your account": "Ihr Konto",
+	"Error deleting account": "Wurde in Klume festgehalten, um ein Konto zu löschen",
+	"UserID": "Benutzer-ID",
+	"This will give ": "Wird gegeben ",
+	"worker permissions": "Mitarbeiter erlaubt",
+	"This will remove administrator permissions from user with email:": "Der Administratorgenehmigungen für den Benutzer werden per E -Mail entfernt:",
+	"This will give administrator permissions to user with email:": "Wird der Erlaubnis des Administrators per E -Mail an den Benutzer zur Verfügung gestellt:",
+	"No users match the filters.": "Es wurde kein Benutzer mit bestimmten Filtern gefunden.",
+	"This will delete users ": "Wird vom Benutzer gelöscht ",
+	"worker account": "Mitarbeiterkonto",
+	"Back to login": "Back to login"
 }
