--- a/locales/en.json
+++ b/locales/en.json
@@ -616,5 +616,34 @@
 	"Password changed successfully!": "Password changed successfully!",
 	"Sending reset email...": "Sending reset email...",
 	"Reset token is invalid or expired": "Reset token is invalid or expired",
-	"User not found": "User not found"
+	"User not found": "User not found",
+	"Find us at this location": "Find us at this location",
+	"Help me get there": "Help me get there",
+	"Confirm": "Confirm",
+	"Are you sure?": "Are you sure?",
+	"This will change ": "This will change ",
+	"projects status to": "projects status to",
+	"Status updated successfully": "Status updated successfully",
+	"This will change": "This will change",
+	"This will finish": "This will finish",
+	"project and send an email to them": "project and send an email to them",
+	"Project not found": "Project not found",
+	"This update the end date projection and set the project to \"Delayed\"": "This update the end date projection and set the project to \"Delayed\"",
+	"Choose a date first": "Choose a date first",
+	"Choose Appointment Time": "Choose Appointment Time",
+	"This will cancel": "This will cancel",
+	"your project": "your project",
+	"This will cancel your project for": "This will cancel your project for",
+	"Session ended": "Session ended",
+	"This will permanently delete": "This will permanently delete",
+	"your account": "your account",
+	"Error deleting account": "Error deleting account",
+	"UserID": "UserID",
+	"This will give ": "This will give ",
+	"worker permissions": "worker permissions",
+	"This will remove administrator permissions from user with email:": "This will remove administrator permissions from user with email:",
+	"This will give administrator permissions to user with email:": "This will give administrator permissions to user with email:",
+	"No users match the filters.": "No users match the filters.",
+	"This will delete users ": "This will delete users ",
+	"worker account": "worker account"
 }
