--- a/locales/lv.json
+++ b/locales/lv.json
@@ -610,5 +610,34 @@
 	"Password changed successfully!": "Parole veiksmīgi nomainīta!",
 	"Sending reset email...": "Notiek E-pasta sūtīšana...",
 	"Reset token is invalid or expired": "Tokens paroles maiņai nav derīgs vai ir beidzies",
-	"User not found": "Lietotājs nav atrasts"
+	"User not found": "Lietotājs nav atrasts",
+	"Find us at this location": "Atrodiet mūs šeit",
+	"Help me get there": "Palīdzēt man tur nokļūt",
+	"Confirm": "Apstriprināt",
+	"Are you sure?": "Vai esi drošs?",
+	"This will change ": "Tiks mainīts ",
+	"projects status to": "remonta statuss",
+	"Status updated successfully": "Statuss veiksmīgi atjaunots",
+	"This will change": "Tiks mainīts",
+	"This will finish": "Tiks pabeigts",
+	"project and send an email to them": "remonts un aizsūtīts E-pasta paziņojums",
+	"Project not found": "Netika atrasts neviens remonts",
+	"This will update the end date projection and set the project to \"Delayed\"": "Tiks atjaunots beigu datums un remonts atzīmēts kā \"Kavēts\"",
+	"Choose a date first": "Vispirms izvēlies datumu",
+	"Choose Appointment Time": "Izvēlies remonta laiku",
+	"This will cancel": "Tiks atcelts",
+	"your project": "tavs projekts",
+	"This will cancel your project for": "Tiks atcets remonts priekš",
+	"Session ended": "Sesija beigusies",
+	"This will permanently delete": "Tiks neatgriežami dzēsts",
+	"your account": "tavs konts",
+	"Error deleting account": "Notika ķļume dzēšot kontu",
+	"UserID": "UserID",
+	"This will give ": "Tiks dotas ",
+	"worker permissions": "darbinieka atļaujas",
+	"This will remove administrator permissions from user with email:": "Tiks noņemtas administratora atļaujas lietotājam ar E-pastu:",
+	"This will give administrator permissions to user with email:": "Tiks sniegtas administratora atļaujas lietotājam ar E-pastu:",
+	"No users match the filters.": "Netika atrasts neviens lietotājs ar dotajiem filtriem.",
+	"This will delete users ": "Tiks dzēsts lietotāja ",
+	"worker account": "Darbinieka konts"
 }
