--- a/locales/ru.json
+++ b/locales/ru.json
@@ -588,36 +588,65 @@
 	"Successfully removed worker account": "Успешно удаленная учетная запись рабочей",
 	"Successfully made worker account": "Успешно сделано работник аккаунт",
 	"Successfully gave administrator perms": "Успешно дал администратору Perms",
-	"Users Projects": "Users Projects",
-	"contact_form_fill_all_fields": "contact_form_fill_all_fields",
-	"Fill all contact form fields": "Fill all contact form fields",
-	"Conctact form error": "Conctact form error",
-	"Password changed successfully": "Password changed successfully",
-	"Information updated succesfully": "Information updated succesfully",
-	"Appointment successfully cancelled.": "Appointment successfully cancelled.",
-	"Choose an appointment date": "Choose an appointment date",
-	"Successfully logged out": "Successfully logged out",
-	"Contact form success": "Contact form success",
-	"Attempting to send email...": "Attempting to send email...",
-	"Message sent succesfully": "Message sent succesfully",
-	"Please select a date and time": "Please select a date and time",
-	"Please select an appointment type": "Please select an appointment type",
-	"Information updated successfully": "Information updated successfully",
-	"Back to login": "Back to login",
-	"Choose an appointment type first": "Choose an appointment type first",
-	"Password reset email sent": "Password reset email sent",
-	"End date changed successfully": "End date changed successfully",
-	"dasfds": "dasfds",
-	"Project finished successfully": "Project finished successfully",
-	"Reset email sent": "Reset email sent",
-	"New Password": "New Password",
-	"Password must be at least 8 characters": "Password must be at least 8 characters",
-	"Enter a new password": "Enter a new password",
-	"Enter new password": "Enter new password",
-	"Confirm Password": "Confirm Password",
-	"Passwords do not match": "Passwords do not match",
-	"Password changed successfully!": "Password changed successfully!",
-	"Sending reset email...": "Sending reset email...",
-	"Reset token is invalid or expired": "Reset token is invalid or expired",
-	"User not found": "User not found"
+	  "Users Projects": "Пользователи проекты",
+  "contact_form_fill_all_fields": "contact_form_fill_all_fields",
+  "Fill all contact form fields": "Заполните все поля контактной формы",
+  "Conctact form error": "Ошибка формы концепции",
+  "Password changed successfully": "Пароль успешно изменился",
+  "Information updated succesfully": "Информация обновлена ​​успешно",
+  "Appointment successfully cancelled.": "Назначение успешно отменено.",
+  "Choose an appointment date": "Выберите дату встречи",
+  "Successfully logged out": "Успешно вышел из строя",
+  "Contact form success": "Контактная форма успех",
+  "Attempting to send email...": "Попытка отправить электронную почту ...",
+  "Message sent succesfully": "Сообщение отправлено успешно",
+  "Please select a date and time": "Пожалуйста, выберите дату и время",
+  "Please select an appointment type": "Пожалуйста, выберите тип встречи",
+  "Information updated successfully": "Информация обновлена ​​успешно",
+  "Back to login": "Вернуться к входу в систему",
+  "Choose an appointment type first": "Сначала выберите тип встречи",
+  "Password reset email sent": "Сброс пароля отправлена ​​отправлено",
+  "End date changed successfully": "Дата окончания успешно изменилась",
+  "dasfds": "Dasfds",
+  "Project finished successfully": "Проект завершился успешно",
+  "Reset email sent": "Сбросить электронное письмо отправлено",
+  "New Password": "Новый пароль",
+  "Password must be at least 8 characters": "Пароль должен быть не менее 8 символов",
+  "Enter a new password": "Введите новый пароль",
+  "Enter new password": "Введите новый пароль",
+  "Confirm Password": "Подтвердите пароль",
+  "Passwords do not match": "Пароли не совпадают",
+  "Password changed successfully!": "Пароль успешно изменился!",
+  "Sending reset email...": "Отправка электронной почты сброса ...",
+  "Reset token is invalid or expired": "Сброс токена является недействительным или истек срок",
+  "User not found": "Пользователь не найден",
+  "Find us at this location": "Найдите нас в этом месте",
+  "Help me get there": "Помогите мне добраться туда",
+  "Confirm": "Подтверждать",
+  "Are you sure?": "Вы уверены?",
+  "This will change ": "Это изменится ",
+  "projects status to": "статус проектов",
+  "Status updated successfully": "Статус обновлен успешно",
+  "This will change": "Это изменится",
+  "This will finish": "Это закончит",
+  "project and send an email to them": "Проект и отправьте им электронное письмо",
+  "Project not found": "Проект не найден",
+  "This will update the end date projection and set the project to \"Delayed\"": "Это обновит проекцию даты окончания и установит проект «отложено»",
+  "Choose a date first": "Сначала выберите дату",
+  "Choose Appointment Time": "Выберите время встречи",
+  "This will cancel": "Это отменит",
+  "your project": "Ваш проект",
+  "This will cancel your project for": "Это отменит ваш проект для",
+  "Session ended": "Сессия закончилась",
+  "This will permanently delete": "Это навсегда удалит",
+  "your account": "Ваш аккаунт",
+  "Error deleting account": "Удаление ошибок",
+  "UserID": "ID пользователя",
+  "This will give ": "Это даст ",
+  "worker permissions": "разрешения работника",
+  "This will remove administrator permissions from user with email:": "Это удалит разрешения администратора от пользователя с электронной почтой:",
+  "This will give administrator permissions to user with email:": "Это даст разрешения администратора пользователю по электронной почте:",
+  "No users match the filters.": "Ни один пользователи не соответствуют фильтрам.",
+  "This will delete users ": "Это удалит пользователей ",
+  "worker account": "Рабочий счет"
 }
