--- a/locales/lv.json
+++ b/locales/lv.json
@@ -120,7 +120,7 @@
 	"total_price": "Pilna paredzamā cena: €",
 	"Successfully logged in": "Veiksmīgi pieteicies",
 	"Username or email": "Lietotājvārds vai e-pasts",
-	"Invalid credentials": "Nederīgi akreditācijas dati",
+	"Invalid credentials": "Dati nesakrīt ar nevienu kontu",
 	"Enter your username": "Ievadiet savu lietotājvārdu",
 	"Incorrect password": "Nepareiza parole",
 	"Enter a password": "Ievadiet paroli",
