Small additional fixes to appointment and estimator

--- a/locales/dynamic/en.json
+++ b/locales/dynamic/en.json
@@ -1,4 +1,5 @@
 {
   "VIenkārši pārbaudīt mašīnas darbību": "6Simply check the machine operation",
-  "sarkans balts rozā": "red white pink"
+  "sarkans balts rozā": "red white pink",
+  "No additional info provided": "No additional info provided"
 }
