--- a/locales/static/lv.json
+++ b/locales/static/lv.json
@@ -43,7 +43,7 @@
 	"Services": "Pakalpojumi",
 	"About us": "Par mums",
 	"Price Estimator": "Cenu aprēķinātājs",
-	"Make Appointment": "Piesakiet remontu",
+	"Make Appointment": "Pieteikt remontu",
 	"Click or press enter to expand": "Noklikšķiniet vai nospiediet taustiņu Enter, lai izvērstu",
 	"Check Appointments": "Pārbaudiet remontus",
 	"View projects to be finished today": "Skatiet projektus, kas jāpabeidz šodien",
@@ -59,7 +59,7 @@
 	"Log Out": "Iziet",
 	"Sign Up": "Reģistrēties",
 	"unauthorized_access": "NEATĻAUTA PIEEJA!",
-	"session_message": "Sesija nav atrasta, lūdzu, piesakieties!",
+	"session_message": "Sesija nav atrasta, lūdzu, ienāciet no jauna!",
 	"work_hours_title": "Mūsu darba laiks",
 	"work_hours_text": "Esam atvērti šādos laikos:",
 	"monday_to_friday": "No pirmdienas līdz piektdienai: 9:00–18:00",
@@ -631,7 +631,7 @@
 	"Session ended": "Sesija beigusies",
 	"This will permanently delete": "Tiks neatgriežami dzēsts",
 	"your account": "tavs konts",
-	"Error deleting account": "Notika ķļume dzēšot kontu",
+	"Error deleting account": "Notika kļume dzēšot kontu",
 	"UserID": "UserID",
 	"This will give ": "Tiks dotas ",
 	"worker permissions": "darbinieka atļaujas",
@@ -640,13 +640,13 @@
 	"No users match the filters.": "Netika atrasts neviens lietotājs ar dotajiem filtriem.",
 	"This will delete users ": "Tiks dzēsts lietotāja ",
 	"worker account": "Darbinieka konts",
-	"Car Info:": "Car Info:",
-	"Additional Info": "Additional Info",
-	"Car Brand": "Car Brand",
-	"Car Model": "Car Model",
-	"Car Year": "Car Year",
-	"Car Brand- FORD": "Car Brand- FORD",
-	"Additional Info:": "Additional Info:",
-	"Selected Date Range": "Selected Date Range",
-	"Creating appointment...": "Creating appointment..."
+	"Car Info:": "Informācija par auto:",
+	"Additional Info": "Papildus informācija",
+	"Car Brand": "Auto zīmols",
+	"Car Model": "Auto modelis",
+	"Car Year": "Auto izlaišanas gads",
+	"Additional Info:": "Papildus informācija:",
+	"Selected Date Range": "Izvēlētais laika intervāls",
+	"Creating appointment...": "Piesaka remontu...",
+	"Error creating appointment": "Error creating appointment"
 }
